src/test/ui/multiple-main-2.stderr
error[E0137]: multiple functions with a #[main] attribute
  --> $DIR/multiple-main-2.rs:18:1
   |
LL | / fn bar() {
LL | | }
   | |_- first #[main] function
...
LL | / fn foo() { //~ ERROR multiple functions with a #[main] attribute
LL | | }
   | |_^ additional #[main] function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0137`.
