src/test/ui/multiple-main-2.rs
#![feature(main)]

#[main]
fn bar() {
}

#[main]
fn foo() { //~ ERROR multiple functions with a #[main] attribute
}
